<resources>
    <string name="app_name" translatable="false">Shutter Notes</string>
    <string name="version_name">version: </string>
    <string name="version_number" translatable="false">0.4.1</string>
    <string name="version_code" translatable="false">56</string>
    <string name="info_app_name" translatable="false">Shutter Notes</string>
    <string name="info_name" translatable="false">mohb apps</string>
    <string name="info_website">mohb.dev</string>
    <string name="info_feedback_email" translatable="false">feedback@mohb.dev</string>
    <string name="info_bug_email" translatable="false">bug@mohb.dev</string>
    <string name="info_developer">Developer:</string>
    <string name="info_developer_name" translatable="false">Haraldo Albergaria Filho</string>
    <string name="info_copyright_text" translatable="false">Copyright © 2019 mohb apps</string>
    <string name="info_rights_reserved_text">All Rights Reserved.</string>
    <string name="cont_desc_app_icon" translatable="false">app icon</string>
    <string name="cont_desc_mohb_logo" translatable="false">mohb logo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">mohb apps</string>
    <string name="nav_header_subtitle">mail@mohb.dev</string>
    <string name="nav_header_desc">ShutterNotes</string>
    <string name="nav_menu_simple">Simple Notes</string>
    <string name="nav_menu_gear">Gear Notes</string>
    <string name="nav_menu_flickr">Flickr Notes</string>
    <string name="nav_menu_archive">Archived</string>
    <string name="nav_menu_account">Flickr Account</string>
    <string name="nav_menu_clock">Synchronize Clocks</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="nav_menu_help">Help</string>
    <string name="nav_menu_about">About</string>
    <string name="bot_nav_menu_simple">Simple</string>
    <string name="bot_nav_menu_gear">Gear</string>
    <string name="bot_nav_menu_flickr" translatable="false">Flickr</string>
    <string name="button_simple">SIMPLE</string>
    <string name="button_gear">GEAR</string>
    <string name="button_flickr" translatable="false">FLICKR</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_reset">Reset</string>
    <string name="button_show">Show</string>
    <string name="button_ok" translatable="false">OK</string>
    <string name="button_exit">Exit</string>
    <string name="button_save">Save</string>
    <string name="button_connect">Connect Account</string>
    <string name="button_connected">Account Connected</string>
    <string name="button_connecting">Connecting to Flickr account…</string>
    <string name="activity_title_simple_notes">Simple Notes</string>
    <string name="activity_title_gear_notes">Gear Notes</string>
    <string name="activity_title_flickr_notes">Flickr Notes</string>
    <string name="activity_title_archive">Archived</string>
    <string name="activity_title_simple_note">Simple Note</string>
    <string name="activity_title_gear_note">Gear Note</string>
    <string name="activity_title_add_tags">Add Tags</string>
    <string name="activity_title_gears_list">Acessories</string>
    <string name="activity_title_flickr_note">Flickr Note</string>
    <string name="activity_title_simple_note_fullscreen">Simple Note Fullscreen</string>
    <string name="activity_title_gear_note_fullscreen">Gear Note Fullscreen</string>
    <string name="activity_title_flickr_note_fullscreen">Flickr Note Fullscreen</string>
    <string name="activity_title_note_fullscreen">Note Fullscreen</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_help">Help</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_flickr_connect">Connect Flickr account</string>
    <string name="activity_title_flickr_photosets">Choose photoset</string>
    <string name="activity_title_flickr_upload">Upload to Flickr</string>
    <string name="activity_title_clock">Clock</string>
    <string name="action_send_feedback">Send feedback</string>
    <string name="action_send_question">Send question</string>
    <string name="action_report_bug">Report a bug</string>
    <string name="action_terms_of_use">Terms of use</string>
    <string name="action_privacy_policy">Privacy policy</string>
    <string name="action_material_icons">Graphical resources attribution</string>
    <string name="action_website">Website</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_question">Question</string>
    <string name="action_bug_report">Bug in application</string>
    <string name="action_about_application">about application</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_gear">Add new gearItem</string>
    <string name="action_select_all">Select all</string>
    <string name="action_unselect_all">Unselect all</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_reorder">Reorder</string>
    <string name="action_archive_all">Archive all</string>
    <string name="action_restore_all">Restore all</string>
    <string name="action_upload_to_flickr">Upload to Flickr</string>
    <string name="action_restore_defaults">Restore defaults</string>
    <string name="action_sync_clock">Syncronize clock</string>
    <string name="action_update_location">Update location</string>
    <string name="action_help">Help</string>
    <string name="context_archive">Archive</string>
    <string name="context_restore">Restore</string>
    <string name="context_delete">Delete</string>
    <string name="context_edit">Edit</string>
    <string name="text_hint_simple_note">Write your note here</string>
    <string name="text_hint_gear_note_title">Type here the title</string>
    <string name="text_list_gear_note_item">Accessory</string>
    <string name="text_hint_flickr_note_title">Type here the title</string>
    <string name="text_hint_flickr_note_description">Write here the description</string>
    <string name="text_type_code">Type the code here</string>
    <string name="text_photo">photo</string>
    <string name="text_photo_cl">Photo</string>
    <string name="text_s">s</string>
    <string name="text_syncronize_clock">SYNCHRONIZE YOUR CAMERA CLOCK</string>
    <string name="dialog_view_title">Title</string>
    <string name="dialog_view_text">text</string>
    <string name="dialog_add_gear_title">New Accessory</string>
    <string name="dialog_edit_gear_title">Edit Accessory</string>
    <string name="title_progress_upload_data">Adding data to photos…</string>
    <string name="title_progress_photosets">Loading photosets…</string>
    <string name="dialog_warning_title">Important warning!</string>
    <string name="dialog_instruction_title">Instructions</string>
    <string name="dialog_warning_flickr_note_message">Before create your Flickr notes, do not forget to synchronize your camera and smartphone clocks</string>
    <string name="dialog_instruction_fullscreen_message">Take a picture of the green screen to mark the start of the photo sequence. After finish, long click the screen to turn it red and take a picture to mark the end of the sequence. Finally, long click the screen again to exit.</string>
    <string name="dialog_warning_button_ok">OK, I understand</string>
    <string name="alert_title_delete_gear">Delete accessory?</string>
    <string name="alert_title_delete_note">Delete note?</string>
    <string name="alert_title_delete_all_notes">Delete all notes?</string>
    <string name="alert_title_archive_all_notes">Archive all notes?</string>
    <string name="alert_title_archive_selected_notes">Archive selected notes?</string>
    <string name="alert_title_restore_all_notes">Restore all notes?</string>
    <string name="alert_title_delete_all_items">Delete all?</string>
    <string name="alert_title_reset_preferences">Restore defaults?</string>
    <string name="alert_title_confirm_upload">Confirm upload?</string>
    <string name="alert_title_run_background">Continue in background</string>
    <string name="alert_title_authenticate">Authentication needed!</string>
    <string name="alert_message_reset_preferences">All settings will be restored to the default values\n</string>
    <string name="alert_message_no_undone">This action can not be undone\n</string>
    <string name="alert_message_can_be_restored">They will can be restored later\n</string>
    <string name="alert_message_delete_all_notes">All notes will be permanently deleted\n</string>
    <string name="alert_message_restore_all_notes">All notes will be restored to its original location\n</string>
    <string name="alert_message_confirm_upload">The notes information will be uploaded to the selected photoset. AFTER STARTED THIS OPERATION WILL CAN NOT BE CANCELED!</string>
    <string name="pref_group_general_settings_key" translatable="false">GENERAL_SETTINGS_KEY</string>
    <string name="pref_group_general_settings">GENERAL SETTINGS</string>
    <string name="pref_key_font_size" translatable="false">FONT_SIZE</string>
    <string name="pref_title_font_size">Font size</string>
    <string name="pref_def_font_size" translatable="false">2</string>
    <string name="pref_group_flickr_notes_settings_key" translatable="false">FLICKR_NOTES_KEY</string>
    <string name="pref_group_flickr_notes">FLICKR NOTES</string>
    <string name="pref_group_flickr_upload_settings_key" translatable="false">FLICKR_UPLOAD_KEY</string>
    <string name="pref_group_flickr_upload">UPLOAD</string>
    <string name="pref_key_what_show" translatable="false">WHAT_SHOW</string>
    <string name="pref_title_what_show">On fullscreen show</string>
    <string name="pref_def_what_show" translatable="false">1</string>
    <string name="pref_key_map_zoom_level" translatable="false">MAP_ZOOM_LEVEL</string>
    <string name="pref_title_map_zoom_level">Map zoom level</string>
    <string name="pref_def_map_zoom_level" translatable="false">2</string>
    <string name="pref_key_overwrite_tags" translatable="false">OVERWRITE_TAGS</string>
    <string name="pref_title_overwrite_tags">Overwrite tags</string>
    <string name="pref_def_overwrite_tags" translatable="false">1</string>
    <string name="pref_key_upload_location" translatable="false">UPLOAD_LOCATION</string>
    <string name="pref_title_upload_location">Location</string>
    <string name="pref_upload_location_summ_on">Upload to Flickr</string>
    <string name="pref_upload_location_summ_off">Do not upload to Flickr</string>
    <string name="pref_def_upload_location" translatable="false">true</string>
    <string name="pref_key_upload_tags" translatable="false">UPLOAD_TAGS</string>
    <string name="pref_title_upload_tags">Tags</string>
    <string name="pref_upload_tags_summ_on">Upload to Flickr</string>
    <string name="pref_upload_tags_summ_off">Do not upload to Flickr</string>
    <string name="pref_def_upload_tags" translatable="false">true</string>
    <string name="pref_key_overwrite_data" translatable="false">OVERWRITE_DATA</string>
    <string name="pref_title_overwrite_data">Data overwrite</string>
    <string name="pref_overwrite_data_summ_on">Overwrite existing data</string>
    <string name="pref_overwrite_data_summ_off">Do not overwrite existing data</string>
    <string name="pref_def_overwrite_data" translatable="false">false</string>
    <string name="pref_key_archive_notes" translatable="false">ARCHIVE_NOTES</string>
    <string name="pref_title_archive_notes">Archive notes</string>
    <string name="pref_archive_notes_summ_on">Archive after upload finished</string>
    <string name="pref_archive_notes_summ_off">Do not archive after upload finished</string>
    <string name="pref_def_archive_notes" translatable="false">false</string>
</resources>