<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_group_general_settings"
        android:key="@string/pref_group_general_settings_key">

        <!-- Font size -->
        <ListPreference
            android:defaultValue="@string/pref_def_font_size"
            android:entries="@array/pref_font_size_titles"
            android:entryValues="@array/pref_font_size_entry_values"
            android:key="@string/pref_key_font_size"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_font_size" />

     </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_flickr_notes"
        android:key="@string/pref_group_flickr_notes_settings_key">

        <!-- What to show on fullscreen note -->
        <ListPreference
            android:defaultValue="@string/pref_def_what_show"
            android:entries="@array/pref_what_show_titles"
            android:entryValues="@array/pref_what_show_entry_values"
            android:key="@string/pref_key_what_show"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_what_show" />

        <!-- Map zoom level -->
        <ListPreference
            android:defaultValue="@string/pref_def_map_zoom_level"
            android:entries="@array/pref_map_zoom_level_titles"
            android:entryValues="@array/pref_map_zoom_level_entry_values"
            android:key="@string/pref_key_map_zoom_level"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_map_zoom_level" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_group_flickr_upload"
        android:key="@string/pref_group_flickr_upload_settings_key">

    <!-- Archive notes -->
        <CheckBoxPreference
            android:key="@string/pref_key_archive_notes"
            android:title="@string/pref_title_archive_notes"
            android:summaryOn="@string/pref_archive_notes_summ_on"
            android:summaryOff="@string/pref_archive_notes_summ_off"
            android:defaultValue="@string/pref_def_archive_notes" />

        <!-- Overwrite data -->
        <CheckBoxPreference
            android:key="@string/pref_key_overwrite_data"
            android:title="@string/pref_title_overwrite_data"
            android:summaryOn="@string/pref_overwrite_data_summ_on"
            android:summaryOff="@string/pref_overwrite_data_summ_off"
            android:defaultValue="@string/pref_def_overwrite_data" />

        <!-- Upload location -->
        <CheckBoxPreference
            android:key="@string/pref_key_upload_location"
            android:title="@string/pref_title_upload_location"
            android:summaryOn="@string/pref_upload_location_summ_on"
            android:summaryOff="@string/pref_upload_location_summ_off"
            android:defaultValue="@string/pref_def_upload_location" />

        <!-- Upload tags -->
        <CheckBoxPreference
            android:key="@string/pref_key_upload_tags"
            android:title="@string/pref_title_upload_tags"
            android:summaryOn="@string/pref_upload_tags_summ_on"
            android:summaryOff="@string/pref_upload_tags_summ_off"
            android:defaultValue="@string/pref_def_upload_tags" />

        <!-- Overwrite tags -->
        <ListPreference
            android:defaultValue="@string/pref_def_overwrite_tags"
            android:entries="@array/pref_overwrite_tags_titles"
            android:entryValues="@array/pref_overwrite_tags_entry_values"
            android:key="@string/pref_key_overwrite_tags"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_overwrite_tags" />

    </PreferenceCategory>

</PreferenceScreen>